# gdns

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  Proxy.cpp  Proxy.h  ServerConfig.cpp  ServerConfig.h  common.c  common.h  config.c  config.h  gdns.conf  iputility.c  iputility.h  main.c  proxy.c  proxy.h  server.c  server.h  session.c  session.h  task.c  task.h
test/: CMakeLists.txt  subnets.txt  testServerConfig.cpp  test_iputility.cxx
